syntax = "proto3";

package channel_member;

service ChannelMemberService {
  rpc AddMember (AddMemberRequest) returns (ChannelMemberResponse) {}
  rpc RemoveMember (RemoveMemberRequest) returns (ChannelMemberResponse) {}
  rpc GetMembers (GetMembersRequest) returns (ChannelMemberListResponse) {}
  rpc SearchMember (SearchMemberRequest) returns (ChannelMemberListResponse) {}
}

message AddMemberRequest {
  string channelId = 1;
  string username = 2;
  string memberUsername = 3;
}

message RemoveMemberRequest {
  string channelId = 1;
  string username = 2;
  string memberUsername = 3;
}

message GetMembersRequest {
  string channelId = 1;
  string username = 2;
}

message SearchMemberRequest {
  string channelId = 1;
  string username = 2;
  string query = 3;
}

message ChannelMemberResponse {
  string message = 1;
}

message ChannelMemberListResponse {
  repeated ChannelMemberInfo members = 1;
}

message ChannelMemberInfo {
  string username = 1;
  string profilePic = 2;
  string createdAt = 3;
}